Update pom.xml
added tests